--- a/StefanWorkbook.ipynb
+++ b/StefanWorkbook.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false
    },
@@ -221,6 +221,7 @@
    "source": [
     "# remove non-english words, stop-words, punctuation\n",
     "def clean_comment(sentence):\n",
+    "    sentence = sentence.decode('utf-8')\n",
     "    parser = HTMLParser()\n",
     "    sentence = parser.unescape(sentence)\n",
     "    # check if a string is a number \n",
@@ -236,92 +237,51 @@
     "            s.decode('ascii')\n",
     "            return True\n",
     "        except UnicodeDecodeError:\n",
+    "            print s\n",
     "            return False\n",
     "    # main logic\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
-    "    tokens_no_punct = tokenizer.tokenize(sentence)\n",
-    "    meaningful_words = [word.lower() for word in tokens_no_punct \n",
-    "            if not is_number(word)\n",
-    "            and is_ascii(word)\n",
-    "            and word.lower() not in stopwords.words('english') \n",
-    "            and english_dict.check(word.lower())]\n",
-    "    return (\" \".join( meaningful_words ))"
+    "    try:\n",
+    "        tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "        tokens_no_punct = tokenizer.tokenize(sentence)\n",
+    "        meaningful_words = [word.lower() for word in tokens_no_punct \n",
+    "                            if not is_number(word)\n",
+    "                            and word.lower() not in stopwords.words('english') \n",
+    "                            and english_dict.check(word.lower())\n",
+    "                            and is_ascii(word)]\n",
+    "        return (\" \".join( meaningful_words ))\n",
+    "    except:\n",
+    "        return \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 145,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "size = 1000\n",
     "clean_train_comments = []\n",
-    "for i in xrange(0, 100):\n",
-    "    clean_train_comments.append(clean_comment(dftrain['body'][i]))"
+    "for i in xrange(0, size):\n",
+    "    clean_train_comments.append(clean_comment(dftrain['body'][i]))\n",
+    "train_data_features = vectorizer.fit_transform(clean_train_comments)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "train_data_features = vectorizer.fit_transform(clean_train_comments)\n",
-    "train_data_features = train_data_features.toarray()"
+    "train_data_features_array = train_data_features.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retailers will just jack up the prices across the board. \n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print dftrain['body'][4]\n",
-    "print train_data_features[4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -377,7 +337,7 @@
    ],
    "source": [
     "print dftrain['body'][8][0:230]\n",
-    "print train_data_features[8]"
+    "print train_data_features_array[8]"
    ]
   },
   {
