--- a/badWorkbook.ipynb
+++ b/badWorkbook.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -26,6 +26,7 @@
     "import pandas as pd; import numpy as np; \n",
     "from scipy.sparse import csr_matrix\n",
     "import nltk\n",
+    "from unidecode import unidecode\n",
     "import math; import time\n",
     "import enchant; english_dict = enchant.Dict(\"en_US\")\n",
     "from nltk.corpus import stopwords\n",
@@ -354,19 +355,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.1 Bag of words"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# check if a string is a number \n",
     "def is_number(s):\n",
@@ -376,9 +378,9 @@
     "    except ValueError:\n",
     "        return False\n",
     "# remove non-english words, stop-words, punctuation\n",
-    "def clean_comment(sentence):\n",
+    "def clean_comment(sentence, isRemoveStop):\n",
     "    try:\n",
-    "        sentence = sentence.decode('utf-8')\n",
+    "        sentence = unicode(unidecode(sentence.decode('utf-8')))\n",
     "        # remove escape sequences, e.g. &gt becomes >\n",
     "        parser = HTMLParser(); sentence = parser.unescape(sentence)\n",
     "        # tokenize\n",
@@ -387,12 +389,20 @@
     "        # remove punctuation, numbers, stopwords, and non-English; return stemmed and lowercase\n",
     "        meaningful_words = [stem(word.lower()) for word in tokens_no_punct \n",
     "                            if not is_number(word)\n",
-    "                            and word.lower() not in stopwords.words('english') \n",
+    "                            and ((not isRemoveStop) or (word.lower() not in stopwords.words('english'))) \n",
     "                            and english_dict.check(word.lower())]\n",
     "        return (\" \".join( meaningful_words ))\n",
     "    # catch nans\n",
     "    except:\n",
+    "        print sentence\n",
     "        return \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.1 Bag of words"
    ]
   },
   {
@@ -406,17 +416,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10  100  1000  10000  100000  200000 "
+      "10  100  1000  10000  100000 "
      ]
     }
    ],
    "source": [
-    "dft = dft_wne\n",
     "# clean all of the comments in the subreddit 'pics'\n",
     "c = 0; start_time = time.time()\n",
-    "dft_clean = []\n",
-    "for row_index, row in dft.iterrows():\n",
-    "    dft_clean.append(clean_comment(row['body']))\n",
+    "dft_wne_clean_nstop = []\n",
+    "for row_index, row in dft_wne.iterrows():\n",
+    "    dft_wne_clean_nstop.append(clean_comment(row['body'],True)) ### Important: TRUE\n",
     "    c += 1\n",
     "    if c==10 or c==100 or c==1000 or c==10000 or c%100000==0:\n",
     "        print (str(c) + \" \"),\n",
@@ -427,37 +436,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# build a bag of words representation \n",
-    "dtf_BOW = vectorizer.fit_transform(dft_clean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# save it to a file\n",
-    "save_sparse_csr(\"data/wne_BOW.npz\",dtf_BOW)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# test that we saved everything correctly\n",
-    "dft_pic_BWO = load_sparse_csr(\"data/pic_BOW.npz\")\n",
-    "b = load_sparse_csr(\"data/wne_BOW.npz\")"
+    "# save the cleaned text to file (later)\n",
+    "se_wne_clean_nstop = pd.Series(dft_wne_clean_nstop)\n",
+    "se_wne_clean_nstop.to_csv('data/wne_clean_nstop.csv')"
    ]
   },
   {
@@ -471,38 +456,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dtf_pic_features_array = dtf_pic_features.toarray()"
+    "# build a bag of words representation \n",
+    "dtf_BOW = vectorizer.fit_transform(dft_clean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(400000, 5000)\n",
-      "(400000,)\n",
-      "(145749, 5000)\n",
-      "(145749,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print shape(dtf_pic_features[0:400000])\n",
-    "print shape(dft_pic['score'][0:400000])\n",
-    "print shape(dtf_pic_features[400000:])\n",
-    "print shape(dft_pic['score'][400000:])"
+    "# save it to a file\n",
+    "save_sparse_csr(\"data/wne_BOW.npz\",dtf_BOW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# test that we saved everything correctly, these are the ones that are done so far\n",
+    "dft_pic_BOW = load_sparse_csr(\"data/pic_BOW.npz\")\n",
+    "dft_wne_BOW = load_sparse_csr(\"data/wne_BOW.npz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dft_pic_BOW_a = dft_pic_BOW.toarray()"
    ]
   },
   {
@@ -522,19 +519,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "The first step is to build a list of the words which filters out numbers and punctuation, but has stopwords."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10  100  1000  10000  nan\n",
+      "nan\n",
+      "100000  nan\n",
+      "200000  nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "300000  nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "400000  nan\n",
+      "nan\n",
+      "nan\n",
+      "500000  nan\n",
+      "nan\n",
+      "1885.07237506\n"
+     ]
+    }
+   ],
+   "source": [
+    "# clean all of the comments in the subreddit 'worldnews'\n",
+    "c = 0; start_time = time.time()\n",
+    "dft_wne_clean_stop = []\n",
+    "for row_index, row in dft_wne.iterrows():\n",
+    "    dft_wne_clean_stop.append(clean_comment(row['body'],False)) ### Important: FALSE\n",
+    "    c += 1\n",
+    "    if c==10 or c==100 or c==1000 or c==10000 or c%100000==0:\n",
+    "        print (str(c) + \" \"),\n",
+    "print time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We absolutely have to store this, because it takes forever every time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "se_wne_clean_stop = pd.Series(dft_wne_clean_nstop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "UnicodeEncodeError",
+     "evalue": "'ascii' codec can't encode character u'\\xe9' in position 19: ordinal not in range(128)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnicodeEncodeError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-78-a58f4dd733b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mse_wne_clean_stop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/wne_clean_stop.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/sk/anaconda/lib/python2.7/site-packages/pandas/core/series.pyc\u001b[0m in \u001b[0;36mto_csv\u001b[0;34m(self, path, index, sep, na_rep, float_format, header, index_label, mode, nanRep, encoding, date_format, decimal)\u001b[0m\n\u001b[1;32m   2596\u001b[0m                            \u001b[0mindex_label\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnanRep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnanRep\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2597\u001b[0m                            \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdate_format\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2598\u001b[0;31m                            decimal=decimal)\n\u001b[0m\u001b[1;32m   2599\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2600\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/sk/anaconda/lib/python2.7/site-packages/pandas/core/frame.pyc\u001b[0m in \u001b[0;36mto_csv\u001b[0;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, tupleize_cols, date_format, doublequote, escapechar, decimal, **kwds)\u001b[0m\n\u001b[1;32m   1341\u001b[0m                                      \u001b[0mdoublequote\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdoublequote\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1342\u001b[0m                                      escapechar=escapechar, decimal=decimal)\n\u001b[0;32m-> 1343\u001b[0;31m         \u001b[0mformatter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1344\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1345\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpath_or_buf\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/sk/anaconda/lib/python2.7/site-packages/pandas/core/format.pyc\u001b[0m in \u001b[0;36msave\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1548\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1549\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1550\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1551\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1552\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/sk/anaconda/lib/python2.7/site-packages/pandas/core/format.pyc\u001b[0m in \u001b[0;36m_save\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1649\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1650\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1651\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_save_chunk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstart_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_i\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1652\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1653\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_save_chunk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstart_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend_i\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/sk/anaconda/lib/python2.7/site-packages/pandas/core/format.pyc\u001b[0m in \u001b[0;36m_save_chunk\u001b[0;34m(self, start_i, end_i)\u001b[0m\n\u001b[1;32m   1675\u001b[0m                                         quoting=self.quoting)\n\u001b[1;32m   1676\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1677\u001b[0;31m         \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_csv_rows\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1678\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1679\u001b[0m \u001b[0;31m# from collections import namedtuple\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/lib.pyx\u001b[0m in \u001b[0;36mpandas.lib.write_csv_rows (pandas/lib.c:19470)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mUnicodeEncodeError\u001b[0m: 'ascii' codec can't encode character u'\\xe9' in position 19: ordinal not in range(128)"
+     ]
+    }
+   ],
+   "source": [
+    "se_wne_clean_stop.to_csv('data/wne_clean_stop.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2. Prediction Techniques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'shape' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-58e3798255f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtf_pic_BOW_a\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m400000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdft_pic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'score'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m400000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtf_pic_BOW_a\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m400000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdft_pic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'score'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m400000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'shape' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print shape(dtf_pic_BOW_a[0:400000])\n",
+    "print shape(dft_pic['score'][0:400000])\n",
+    "print shape(dtf_pic_BOW_a[400000:])\n",
+    "print shape(dft_pic['score'][400000:])"
    ]
   },
   {
@@ -622,40 +736,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1.2 Word to vector"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "The bag of words representation is convenient for larger bodies of text like articles or books, but might not be best suited for comment data. Comment data is small and semantically packed, we need some way of accessing the intrinsic meaning of a comment from the few words provided. To accomplish this we will use the Word to Vector model, which incoporates deep learning into our existing model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -673,12 +753,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  Utilities and Sketchpad"
+    "###  Utilities and Sketching"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -692,6 +772,22 @@
     "    loader = np.load(filename)\n",
     "    return csr_matrix((  loader['data'], loader['indices'], loader['indptr']),\n",
     "                         shape = loader['shape'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# an experiment\n",
+    "df1 = DataFrame(np.random.randn(10, 4), columns=['a', 'b', 'c', 'd'])\n",
+    "mask = df1.applymap(lambda x: x <-0.7)\n",
+    "df1 = df1[-mask.any(axis=1)]\n",
+    "sLength = len(df1['a'])\n",
+    "df1['e'] = Series(np.random.randn(sLength), index=df1.index)"
    ]
   },
   {
@@ -711,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -724,15 +820,33 @@
     "#    print str(clean_comment(df_pic.iloc[i]['body']))\n",
     "#    print \"\"\n",
     "\n",
-    "    # check if a string is only ascii characters\n",
-    "    #def is_ascii(s)\n",
-    "    #    try:\n",
-    "    #        s.decode('utf-8')\n",
-    "    #        return True\n",
-    "    #    except UnicodeDecodeError:\n",
-    "    #        print s\n",
-    "    #        return False\n",
+    "# check if a string is only ascii characters\n",
+    "def is_ascii(s):\n",
+    "    try:\n",
+    "        s.decode('ascii')\n",
+    "        return True\n",
+    "    except:\n",
+    "        print s\n",
+    "        return False\n",
     "    # main logic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(0,len(dft_wne_clean_nstop)):\n",
+    "    if (not is_ascii(dft_wne_clean_nstop[i])):\n",
+    "        print i\n",
+    "        break\n",
+    "print dft_wne_clean_nstop[89]\n",
+    "print clean_comment(dft_wne_clean_nstop[89],True)\n",
+    "print clean_comment(dft_wne_clean_nstop[89],False)\n",
+    "print type(clean_comment(dft_wne_clean_nstop[89],True))"
    ]
   },
   {
