stash changes, add .pyc to gitignore

--- a/SWorkbook.ipynb
+++ b/SWorkbook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,34 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "dft = pd.read_csv(\"data/finalnbanostop.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#dft_pic = dftrain[dftrain.subreddit==\"pics\"]\n",
-    "#dft_fun = dftrain[dftrain.subreddit==\"funny\"]\n",
-    "#dft_gof = dftrain[dftrain.subreddit==\"GlobalOffensive\"]\n",
-    "#dft_cje = dftrain[dftrain.subreddit==\"circlejerk\"]\n",
-    "#dft_all = [dft_pic, dft_nba, dft_wne, dft_fun, dft_aww, dft_gof, dft_cje]\n",
-    "dft_wne = dftrain[dftrain.subreddit==\"worldnews\"]\n",
-    "dft_aww = dftrain[dftrain.subreddit==\"aww\"]\n",
-    "dft_nba = dftrain[dftrain.subreddit==\"nba\"]\n",
-    "\n",
-    "#dft_all_BOW = [dft_pic_BOW, dft_nba_BOW, dft_wne_BOW, dft_fun_BOW, dft_aww_BOW, dft_gof_BOW, dft_cje_BOW]\n",
-    "#dft_all_TFI = [dft_pic_TFI, dft_nba_TFI, dft_wne_TFI, dft_fun_TFI, dft_aww_TFI, dft_gof_TFI, dft_cje_TFI]"
+    "dftrain = pd.read_csv(\"data/finalnbanostop.csv\")"
    ]
   },
   {
@@ -124,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -260,57 +239,6 @@
        "      <td>reddit stream must click link comment page pro...</td>\n",
        "      <td>87579.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>kobe attempts year jason williams attempts yeesh</td>\n",
-       "      <td>1.459210e+09</td>\n",
-       "      <td>1</td>\n",
-       "      <td>http://reddit.com/r/nba/comments/4cbvvd/c/d1h18q2</td>\n",
-       "      <td>marcus smart worst point shooting season nba h...</td>\n",
-       "      <td>812.0</td>\n",
-       "      <td>1.459123e+09</td>\n",
-       "      <td>nba</td>\n",
-       "      <td>4cbvvd</td>\n",
-       "      <td>https://www.reddit.com/r/nba/comments/4cbvvd</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>86768.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>sound kinda mean man</td>\n",
-       "      <td>1.458174e+09</td>\n",
-       "      <td>3</td>\n",
-       "      <td>http://reddit.com/r/nba/comments/4aq1y4/c/d12o9bg</td>\n",
-       "      <td>game thread oklahoma city thunder boston celti...</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>1.458086e+09</td>\n",
-       "      <td>nba</td>\n",
-       "      <td>4aq1y4</td>\n",
-       "      <td>https://www.reddit.com/r/nba/comments/4aq1y4</td>\n",
-       "      <td>reddit stream must click link comment page</td>\n",
-       "      <td>87423.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>hawks hitting stride gonna tough</td>\n",
-       "      <td>1.458605e+09</td>\n",
-       "      <td>2</td>\n",
-       "      <td>http://reddit.com/r/nba/comments/4beteo/c/d18j7fu</td>\n",
-       "      <td>game thread washington wizards atlanta hawks mar</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>1.458518e+09</td>\n",
-       "      <td>nba</td>\n",
-       "      <td>4beteo</td>\n",
-       "      <td>https://www.reddit.com/r/nba/comments/4beteo</td>\n",
-       "      <td>reddit stream must click link comment page</td>\n",
-       "      <td>87059.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -319,53 +247,35 @@
        "   Unnamed: 0  Unnamed: 0.1                                           comment  \\\n",
        "0           0             0                                              bruh   \n",
        "1           1             1  go http ftve akamaihd net hls live room k prog u   \n",
-       "2           2             2  kobe attempts year jason williams attempts yeesh   \n",
-       "3           3             3                              sound kinda mean man   \n",
-       "4           4             4                  hawks hitting stride gonna tough   \n",
        "\n",
        "    comment_utc  comment_score  \\\n",
        "0  1.456792e+09              1   \n",
        "1  1.459384e+09              1   \n",
-       "2  1.459210e+09              1   \n",
-       "3  1.458174e+09              3   \n",
-       "4  1.458605e+09              2   \n",
        "\n",
        "                                                link  \\\n",
        "0  http://reddit.com/r/nba/comments/48dhcw/c/d0iqq9r   \n",
        "1  http://reddit.com/r/nba/comments/4cnbpg/c/d1jt5ev   \n",
-       "2  http://reddit.com/r/nba/comments/4cbvvd/c/d1h18q2   \n",
-       "3  http://reddit.com/r/nba/comments/4aq1y4/c/d12o9bg   \n",
-       "4  http://reddit.com/r/nba/comments/4beteo/c/d18j7fu   \n",
        "\n",
        "                                               title  score  submission_utc  \\\n",
        "0                                  warriors dominant    0.0    1.456790e+09   \n",
        "1  game thread los angeles clippers minnesota tim...   25.0    1.459296e+09   \n",
-       "2  marcus smart worst point shooting season nba h...  812.0    1.459123e+09   \n",
-       "3  game thread oklahoma city thunder boston celti...   49.0    1.458086e+09   \n",
-       "4   game thread washington wizards atlanta hawks mar   17.0    1.458518e+09   \n",
        "\n",
        "  subreddit submission_id                                      self_url  \\\n",
        "0       nba        48dhcw  https://www.reddit.com/r/nba/comments/48dhcw   \n",
        "1       nba        4cnbpg  https://www.reddit.com/r/nba/comments/4cnbpg   \n",
-       "2       nba        4cbvvd  https://www.reddit.com/r/nba/comments/4cbvvd   \n",
-       "3       nba        4aq1y4  https://www.reddit.com/r/nba/comments/4aq1y4   \n",
-       "4       nba        4beteo  https://www.reddit.com/r/nba/comments/4beteo   \n",
        "\n",
        "                                                body  timedifference  \n",
        "0                                                NaN          1580.0  \n",
-       "1  reddit stream must click link comment page pro...         87579.0  \n",
-       "2                                                NaN         86768.0  \n",
-       "3         reddit stream must click link comment page         87423.0  \n",
-       "4         reddit stream must click link comment page         87059.0  "
+       "1  reddit stream must click link comment page pro...         87579.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dft.head()"
+    "dft.head(n=2)"
    ]
   },
   {
@@ -383,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -406,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
